--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -12,6 +12,13 @@ body {
   align-items: center;
 }
 
+#app {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 #canvas {
   display: flex;
   border: 1px solid rgb(160, 160, 160);
@@ -22,4 +29,18 @@ body {
 #kitten,
 #zombie {
   display: none;
+}
+
+input {
+  position: relative;
+  width: 200px;
+  padding: 10px;
+  background: transparent;
+  border-radius: 10px;
+  border: 3px solid rgba(231, 231, 231, 0.5);
+  color: white;
+  font-weight: bold;
+  font-size: 24px;
+  bottom: 80px;
+  outline: none;
 }
